# UWB

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  calibrate.py  monitor.py  package.xml  plot_distances.py  raw_read.py  requirements.txt  test_cost.py
.github/workflows/: ros_static_check.yml
UWB_TurtleBot_교수님전달용_LiDAR파트_논문형_흑백_간소본/: 02_LiDAR파트_수식_참고문헌_색인.csv  LiDAR파트.docx
UWB_TurtleBot_교수님전달용_논문초안_수식포함/: 01_UWB_TurtleBot_논문초안_수식포함_교수님검토용.docx  02_수식_정리표.csv  03_참고문헌_정리.csv  04_교수님_전달메시지.txt
UWB_TurtleBot_교수님전달용_자료패키지_완성본/: 01_UWB_TurtleBot_자료취합본_교수님전달용.docx
UWB_TurtleBot_교수님전달용_자료패키지_완성본/03_실험데이터/: anchor_charger_coordinates.csv  approach_handoff_preliminary_log.csv  uwb_serial_diagnosis_20260520.csv
UWB_TurtleBot_교수님전달용_참고공부자료_그림추가/: 01_참고자료_및_공부내용_교수님전달용.docx  02_참고자료_공부내용_매트릭스.csv  03_공부내용_요약.md  04_교수님_전달메시지.txt  05_논문그림자료_목록.csv  README_먼저보세요.txt
arduino_codes/: anchor_response_clean.ino  front_tag_anchor_diagnostic.ino
config/: charger_positions.yaml  planner_params.yaml  uwb_calibration.yaml
data/raw/: uwb_log_20260513_194555.csv  uwb_log_20260513_194735.csv  uwb_log_20260513_195129.csv  uwb_log_20260513_195453.csv  uwb_log_20260513_200707.csv  uwb_log_20260513_200821.csv  uwb_log_20260513_201035.csv  uwb_log_20260513_201302.csv  uwb_log_20260513_203722.csv  uwb_logs_combined.csv  uwb_static_position_test_20260513.csv  uwb_static_summary_20260513.csv
docs/: experiment_logging.md  experiment_protocol.md  project_context.md  remote_codex_workflow.md  workflow.md
docs/evidence_pack/: ai_writing_prompt.md  algorithm_description.md  code_version.txt  experiment_table.csv  failure_cases.md  project_summary.md  summary_metrics.csv  system_architecture.md
docs/evidence_pack/config/: charger_positions.yaml
docs/templates/: experiment_manifest_template.yaml  lab_note_template.md
launch/: demo_uwb_lidar_charging.launch  gazebo_mapless_test.launch  laptop_rviz.launch  lidar_local_planner.launch  mapless_charging.launch  odom_mapless_charging.launch  offline_research_test.launch  real_robot.launch  real_uwb_mapless_charging.launch  record_experiment.launch  replay_test.launch  robot_ld08_bringup.launch  uwb_inputs_check.launch  visualization.launch
matlab/: analyze_uwb_log.m  collect_uwb_log.m  export_for_codex.m
research/uwb_followup/: README.md
research/uwb_followup/scripts/: bootstrap_reference_repos.sh  check_local_environment.sh  discover_reference_repos.py  list_uwb_examples.py
research/uwb_followup/simulation/: aoa_baseline.py  filters.py  metrics.py  run_all.py
research/uwb_followup/tests/: test_simulation_basics.py
rviz/: uwb_charging.rviz
scripts/: charger_target_selector.py  charger_uwb_target_manager.py  dual_tag_uwb_pose_raw.py  fake_scan_publisher.py  fake_uwb_imu_test.py  fake_uwb_pose_publisher.py  lidar_local_planner.py  odom_pose_from_start.py  sim_uwb_pose_from_odom.py  start_experiment_record.sh  uwb_imu_pose_fusion.py  uwb_imu_pose_publisher.py  uwb_pose_estimator.py  uwb_rviz_visualizer.py
serial_logs/: serial_monitor.ps1
tools/: analyze_uwb_log.py  build_evidence_pack.py  calibrate_dual_tag_offsets.py  make_lidar_research_bw_pack.py  make_paper_draft_pack.py  make_professor_delivery_pack.py  make_reference_study_pack.py  read_serial_ports.py
worlds/: mapless_charging_test.world
