<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_charging_project</name>
  <version>0.1.0</version>
  <description>UWB-guided TurtleBot charging with LiDAR local obstacle avoidance.</description>

  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>
  </export>
</package>
